--- a/about.html
+++ b/about.html
@@ -10,25 +10,16 @@
     </head>
     <body>
         <div id="header">
-            <div id="logo">
-                <a href="./">My Hakyll Blog</a>
-            </div>
             <div id="navigation">
                 <a href="./">Home</a>
                 <a href="./about.html">About</a>
-                <a href="./contact.html">Contact</a>
                 <a href="./archive.html">Archive</a>
             </div>
         </div>
 
         <div class="page">
             <article>
-                <p>Nullam imperdiet sodales orci vitae molestie. Nunc quam orci, pharetra a rhoncus vitae, eleifend id felis. Suspendisse potenti. Etiam vitae urna orci. Quisque pellentesque dignissim felis, egestas tempus urna luctus vitae. In hac habitasse platea dictumst. Morbi fringilla mattis odio, et mattis tellus accumsan vitae.</p>
-<ol style="list-style-type: decimal">
-<li>Amamus Unicode 碁</li>
-<li>Interdum nex magna.</li>
-</ol>
-<p>Vivamus eget mauris sit amet nulla laoreet lobortis. Nulla in diam elementum risus convallis commodo. Cras vehicula varius dui vitae facilisis. Proin elementum libero eget leo aliquet quis euismod orci vestibulum. Duis rhoncus lorem consequat tellus vestibulum aliquam. Quisque orci orci, malesuada porta blandit et, interdum nec magna.</p>
+                <p>Most of my ideas I write into code. Occasionally there is something that does not encode well into any programming language I use so I type it out in an essay.</p>
             </article>
         </div>
     </body>
