--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <ul>
     
         <li>
-            May  9, 2017 - <a href="./posts/2017-05-09-pwr2.html">2017-05-09-pwr2</a>
+            May  9, 2017 - <a href="./posts/2017-05-09-pwr2.html">Why is computer security hard</a>
         </li>
     
         <li>
