--- a/about.html
+++ b/about.html
@@ -20,7 +20,9 @@
 
         <div class="page">
             <article>
-                <p>Most of my ideas I write into code. Occasionally there is something that does not encode well into any programming language I use so I type it out in an essay.</p>
+                <section>
+                    <p>Most of my ideas I write into code. Occasionally there is something that does not encode well into any programming language I use so I type it out in an essay.</p>
+                </section>
             </article>
         </div>
     </body>
