--- a/archive.html
+++ b/archive.html
@@ -20,7 +20,8 @@
 
         <div class="page">
             <article>
-                Here you can find all my previous posts:
+                <section>
+                    Here you can find all my previous posts:
 <ul>
     
         <li>
@@ -38,6 +39,7 @@
 </ul>
 
 
+                </section>
             </article>
         </div>
     </body>
