--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,9 @@
 
         <div class="page">
             <article>
-                <p>I live in a small hut in the mountains of Kumano Kodō on Kii Hantō and would not like to be contacted.</p>
+                <section>
+                    <p>I live in a small hut in the mountains of Kumano Kodō on Kii Hantō and would not like to be contacted.</p>
+                </section>
             </article>
         </div>
     </body>
