--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
         <div class="page">
             <article>
-                <h2>Welcome</h2>
+                <section>
+                    <h2>Welcome</h2>
 
 <p>Welcome to my blog!</p>
 
@@ -46,6 +47,7 @@
 
 <p>…or you can find more in the <a href="./archive.html">archives</a>.</p>
 
+                </section>
             </article>
         </div>
     </body>
